--- a/c28sdcm1jv977n4u63yccbty376l23p0xc38n0b2l4qgrje4d2xwjou9g76xdglsprhbpo1f5dhil392v5xeileb94p8g3le9f/index.html
+++ b/c28sdcm1jv977n4u63yccbty376l23p0xc38n0b2l4qgrje4d2xwjou9g76xdglsprhbpo1f5dhil392v5xeileb94p8g3le9f/index.html
@@ -6032,7 +6032,7 @@
             </div>
 
             <div class="text-center font-bold justify-center my-4">
-                <span>{{ currentPage }}/{{ totalPages }}</span>
+                <span>{{ displayCurrentPage }}/{{ totalPages }}</span>
             </div>
 
             <!-- Page Size Controls (Right) -->
@@ -10856,6 +10856,9 @@
                 },
                 totalPages() {
                     return Math.ceil(this.filteredEpisodes.length / this.pageSize);
+                },
+                displayCurrentPage() {
+                    return this.totalPages === 0 ? 0 : this.currentPage;
                 },
                 paginatedEpisodes() {
                     const start = (this.currentPage - 1) * this.pageSize;
