--- a/c28sdcm1jv977n4u63yccbty376l23p0xc38n0b2l4qgrje4d2xwjou9g76xdglsprhbpo1f5dhil392v5xeileb94p8g3le9f/index.html
+++ b/c28sdcm1jv977n4u63yccbty376l23p0xc38n0b2l4qgrje4d2xwjou9g76xdglsprhbpo1f5dhil392v5xeileb94p8g3le9f/index.html
@@ -6744,7 +6744,7 @@
                             
                             if (groupEpisodes.length > 0) {
                                 groups.push({
-                                    range: `Episodes ${startRange}–${endRange}`,
+                                    range: `${startRange}–${endRange}`,
                                     items: groupEpisodes
                                 });
                             }
