--- a/c28sdcm1jv977n4u63yccbty376l23p0xc38n0b2l4qgrje4d2xwjou9g76xdglsprhbpo1f5dhil392v5xeileb94p8g3le9f/index.html
+++ b/c28sdcm1jv977n4u63yccbty376l23p0xc38n0b2l4qgrje4d2xwjou9g76xdglsprhbpo1f5dhil392v5xeileb94p8g3le9f/index.html
@@ -740,13 +740,13 @@
                                         <img src="https://raw.githubusercontent.com/c7bb/6Y9//main/c28sdcm1jv977n4u63yccbty376l23p0xc38n0b2l4qgrje4d2xwjou9g76xdglsprhbpo1f5dhil392v5xeileb94p8g3le9f/res/previous.png" alt="رجوع" class="h-6 w-6" />
                                     </button>
                                 </legend>
-                                <div v-if="!selectedEpisode" class="grid grid-cols-3 gap-2">
+                                <div v-if="!selectedEpisode" class="grid grid-cols-3 gap-2" dir="ltr">
                                     <button 
                                     v-for="movie in groupedMovies[activeTab.movies]?.items" 
                                     :disabled="selectedEpisode?.EpisodeVideosIDs?.some(video => video.status === 'success' || video.status === 'ratelimiting' || video.status === 'sending') || selectedEpisode?.EpisodeMangasIDs?.some(manga => manga.status === 'success' || manga.status === 'ratelimiting' || manga.status === 'sending')"
                                     @click="selectMovie(movie)" 
                                     class="bg-amber-700 text-white p-2 rounded hover:bg-green-500 disabled:opacity-50 disabled:cursor-not-allowed transition-all duration-100 active:scale-90">
-                                    {{ movie.EpisodeNumber }}
+                                    {{ movie.EpisodeNumber.replace('الفيلم ', '') }}
                                 </button>                                
                                 </div>
                                 <div v-else class="flex flex-col justify-center gap-4">
@@ -757,7 +757,7 @@
                                             </button>
                                         </div>
                                         <div class="flex-grow text-center">
-                                            <span class="text-lg font-bold">{{ selectedEpisode.EpisodeNumber }}</span>
+                                            <span class="text-lg font-bold">{{ selectedEpisode.EpisodeNumber.replace('الفيلم ', '') }}</span>
                                         </div>
                                         <div class="w-8 flex justify-end">
                                             <button :disabled="!hasPreviousMovie || selectedEpisode?.EpisodeVideosIDs?.some(video => video.status === 'success' || video.status === 'ratelimiting' || video.status === 'sending') || selectedEpisode?.EpisodeMangasIDs?.some(manga => manga.status === 'success' || manga.status === 'ratelimiting' || manga.status === 'sending')" @click="navigateToPreviousMovie(); resetStatusForEpisodeManga();" class="transition-opacity disabled:opacity-50 disabled:cursor-not-allowed transition-all duration-100 active:scale-90">
