--- a/c28sdcm1jv977n4u63yccbty376l23p0xc38n0b2l4qgrje4d2xwjou9g76xdglsprhbpo1f5dhil392v5xeileb94p8g3le9f/index.html
+++ b/c28sdcm1jv977n4u63yccbty376l23p0xc38n0b2l4qgrje4d2xwjou9g76xdglsprhbpo1f5dhil392v5xeileb94p8g3le9f/index.html
@@ -5329,6 +5329,9 @@
                                         class="w-full py-2 bg-teal-600 text-white font-bold text-lg rounded hover:bg-teal-500 transition-all duration-100 hover:scale-105 active:scale-90">
                                         {{ ep }}
                                     </button>
+                                    <p v-if="episodeOfWeekTimeAgo" class="text-white text-xs text-center mt-2">
+                                        آخر تحديث: {{ episodeOfWeekTimeAgo }}
+                                    </p>
                                 </div>
                                 <!-- Manga Column -->
                                 <div class="flex flex-col items-center">
@@ -6699,6 +6702,7 @@
                     nextEpisodeExists: false,
                     previousEpisodeExists: false,
                     ratelimiting: false,
+                    episodeOfWeekTimeAgo: '',
                 };
             },
             computed: {
@@ -6849,6 +6853,10 @@
                     const currentGroup = this.groupedMangas[this.activeTab.mangas].items;
                     const currentIndex = currentGroup.findIndex(manga => manga.MangaNumber === this.selectedManga.MangaNumber);
                     return currentIndex !== -1 && currentIndex > 0;
+                },
+
+                episodeOfWeek() {
+                    return this.episodes.find(e => e.EpisodeNumber === String(this.ep));
                 },
 
                 filteredEpisodes() {
@@ -13126,6 +13134,107 @@
                 },
             },
             methods: {
+                updateEpisodeTimeAgo() {
+                    if (!this.episodeOfWeek || !this.episodeOfWeek.EpisodeBCDate) {
+                        this.episodeOfWeekTimeAgo = '';
+                        return;
+                    }
+
+                    const bcDate = this.episodeOfWeek.EpisodeBCDate;
+                    const dateParts = bcDate.split('/');
+                    if (dateParts.length !== 3) {
+                        this.episodeOfWeekTimeAgo = '';
+                        return;
+                    }
+
+                    const [day, month, year] = dateParts.map(Number);
+                    const episodeDate = new Date(year, month - 1, day);
+                    const now = new Date();
+                    const diffMs = now - episodeDate;
+                    const diffSeconds = Math.floor(diffMs / 1000);
+                    const diffMinutes = Math.floor(diffMs / (1000 * 60));
+                    const diffHours = Math.floor(diffMs / (1000 * 60 * 60));
+                    const diffDays = Math.floor(diffMs / (1000 * 60 * 60 * 24));
+                    const diffMonths = Math.floor(diffDays / 30);
+                    const diffYears = Math.floor(diffDays / 365);
+
+                    // Check for remainders to determine if we need "أكثر من"
+                    const hasExtraSeconds = diffSeconds % 60 > 0;
+                    const hasExtraMinutes = diffMinutes % 60 > 0;
+                    const hasExtraHours = diffHours % 24 > 0;
+                    const hasExtraDays = diffDays % 30 > 0;
+                    const hasExtraMonths = (diffDays % 365) >= 30;
+
+                    let timeAgoText = '';
+                    const moreThan = 'أكثر من ';
+
+                    if (diffMinutes < 1) {
+                        timeAgoText = 'الآن';
+                    } else if (diffMinutes === 1 && !hasExtraSeconds) {
+                        timeAgoText = 'دقيقة مضت';
+                    } else if (diffMinutes === 1 && hasExtraSeconds) {
+                        timeAgoText = moreThan + 'دقيقة مضت';
+                    } else if (diffMinutes === 2 && !hasExtraSeconds) {
+                        timeAgoText = 'دقيقتان مضتا';
+                    } else if (diffMinutes === 2 && hasExtraSeconds) {
+                        timeAgoText = moreThan + 'دقيقتان مضتا';
+                    } else if (diffMinutes >= 3 && diffMinutes <= 10) {
+                        timeAgoText = (hasExtraSeconds ? moreThan : '') + `${diffMinutes} دقائق مضت`;
+                    } else if (diffMinutes >= 11 && diffMinutes <= 59) {
+                        timeAgoText = (hasExtraSeconds ? moreThan : '') + `${diffMinutes} دقيقة مضت`;
+                    } else if (diffHours === 1 && !hasExtraMinutes) {
+                        timeAgoText = 'ساعة مضت';
+                    } else if (diffHours === 1 && hasExtraMinutes) {
+                        timeAgoText = moreThan + 'ساعة مضت';
+                    } else if (diffHours === 2 && !hasExtraMinutes) {
+                        timeAgoText = 'ساعتان مضتا';
+                    } else if (diffHours === 2 && hasExtraMinutes) {
+                        timeAgoText = moreThan + 'ساعتان مضتا';
+                    } else if (diffHours >= 3 && diffHours <= 10) {
+                        timeAgoText = (hasExtraMinutes ? moreThan : '') + `${diffHours} ساعات مضت`;
+                    } else if (diffHours >= 11 && diffHours <= 23) {
+                        timeAgoText = (hasExtraMinutes ? moreThan : '') + `${diffHours} ساعة مضت`;
+                    } else if (diffDays === 1 && !hasExtraHours) {
+                        timeAgoText = 'يوم مضى';
+                    } else if (diffDays === 1 && hasExtraHours) {
+                        timeAgoText = moreThan + 'يوم مضى';
+                    } else if (diffDays === 2 && !hasExtraHours) {
+                        timeAgoText = 'يومان مضيا';
+                    } else if (diffDays === 2 && hasExtraHours) {
+                        timeAgoText = moreThan + 'يومان مضيا';
+                    } else if (diffDays >= 3 && diffDays <= 10) {
+                        timeAgoText = (hasExtraHours ? moreThan : '') + `${diffDays} أيام مضت`;
+                    } else if (diffDays >= 11 && diffDays < 30) {
+                        timeAgoText = (hasExtraHours ? moreThan : '') + `${diffDays} يومًا مضت`;
+                    } else if (diffMonths === 1 && !hasExtraDays) {
+                        timeAgoText = 'شهر مضى';
+                    } else if (diffMonths === 1 && hasExtraDays) {
+                        timeAgoText = moreThan + 'شهر مضى';
+                    } else if (diffMonths === 2 && !hasExtraDays) {
+                        timeAgoText = 'شهران مضيا';
+                    } else if (diffMonths === 2 && hasExtraDays) {
+                        timeAgoText = moreThan + 'شهران مضيا';
+                    } else if (diffMonths >= 3 && diffMonths <= 10) {
+                        timeAgoText = (hasExtraDays ? moreThan : '') + `${diffMonths} أشهر مضت`;
+                    } else if (diffMonths >= 11 && diffMonths < 12) {
+                        timeAgoText = (hasExtraDays ? moreThan : '') + `${diffMonths} شهرًا مضت`;
+                    } else if (diffYears === 1 && !hasExtraMonths) {
+                        timeAgoText = 'سنة مضت';
+                    } else if (diffYears === 1 && hasExtraMonths) {
+                        timeAgoText = moreThan + 'سنة مضت';
+                    } else if (diffYears === 2 && !hasExtraMonths) {
+                        timeAgoText = 'سنتان مضتا';
+                    } else if (diffYears === 2 && hasExtraMonths) {
+                        timeAgoText = moreThan + 'سنتان مضتا';
+                    } else if (diffYears >= 3 && diffYears <= 10) {
+                        timeAgoText = (hasExtraMonths ? moreThan : '') + `${diffYears} سنوات مضت`;
+                    } else {
+                        timeAgoText = (hasExtraMonths ? moreThan : '') + `${diffYears} سنة مضت`;
+                    }
+
+                    this.episodeOfWeekTimeAgo = timeAgoText;
+                },
+
                 nextPage() {
                     if (this.currentPage < this.totalPages) {
                         this.currentPage++;
@@ -15690,12 +15799,19 @@
 
                 this.updateFontSize();
                 window.addEventListener('resize', this.updateFontSize);
+
+                // Initialize episode time ago and set up interval to update it
+                this.updateEpisodeTimeAgo();
+                this.episodeTimeInterval = setInterval(() => {
+                    this.updateEpisodeTimeAgo();
+                }, 60000); // Update every minute
             },
 
             unmounted() {
 
                 // Clear any app-specific intervals/timeouts
                 if (this.intervalId) clearInterval(this.intervalId);
+                if (this.episodeTimeInterval) clearInterval(this.episodeTimeInterval);
                 if (this.timeoutId) clearTimeout(this.timeoutId);
 
                 // Clean up event listener to prevent memory leaks
