--- a/c28sdcm1jv977n4u63yccbty376l23p0xc38n0b2l4qgrje4d2xwjou9g76xdglsprhbpo1f5dhil392v5xeileb94p8g3le9f/index.html
+++ b/c28sdcm1jv977n4u63yccbty376l23p0xc38n0b2l4qgrje4d2xwjou9g76xdglsprhbpo1f5dhil392v5xeileb94p8g3le9f/index.html
@@ -5330,7 +5330,7 @@
                                         {{ ep }}
                                     </button>
                                     <p v-if="episodeOfWeekTimeAgo" class="text-white text-xs text-center mt-2">
-                                        آخر تحديث: {{ episodeOfWeekTimeAgo }}
+                                        {{ episodeOfWeekTimeAgo }}
                                     </p>
                                 </div>
                                 <!-- Manga Column -->
