--- a/c28sdcm1jv977n4u63yccbty376l23p0xc38n0b2l4qgrje4d2xwjou9g76xdglsprhbpo1f5dhil392v5xeileb94p8g3le9f/index.html
+++ b/c28sdcm1jv977n4u63yccbty376l23p0xc38n0b2l4qgrje4d2xwjou9g76xdglsprhbpo1f5dhil392v5xeileb94p8g3le9f/index.html
@@ -125,6 +125,12 @@
                 //     event.preventDefault();
                 // }
         </script>    
+        <!-- Tippy.js for tooltips -->
+        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/tippy.js@6.3.7/dist/tippy.min.css">
+        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/tippy.js@6.3.7/themes/retro.css">
+        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/tippy.js@6.3.7/animations/scale-extreme.css">
+        <script src="https://unpkg.com/@popperjs/core@2"></script>
+        <script src="https://cdn.jsdelivr.net/npm/tippy.js@6.3.7/dist/tippy.umd.min.js"></script>
         <script src="https://cdn.jsdelivr.net/npm/vue@3/dist/vue.global.js"></script>
         <script src="episodes.json" type="application/json"></script>
         <script src="https://cdn.tailwindcss.com"></script>
@@ -16140,6 +16146,39 @@
             }
 
         }).mount('#app');
+
+        // Initialize Tippy.js tooltips
+        setTimeout(() => {
+            const tooltipContainers = document.querySelectorAll('.tooltip-container');
+            
+            tooltipContainers.forEach(container => {
+                const tooltipText = container.querySelector('.tooltip-text');
+                if (tooltipText) {
+                    const content = tooltipText.textContent.trim();
+                    tooltipText.style.display = 'none'; // Hide the original tooltip text
+                    
+                    tippy(container, {
+                        content: content,
+                        followCursor: true,
+                        theme: 'retro',
+                        animation: 'scale-extreme',
+                        placement: 'top',
+                        arrow: true,
+                        popperOptions: {
+                            strategy: 'fixed',
+                            modifiers: [
+                                {
+                                    name: 'flip',
+                                    options: {
+                                        fallbackPlacements: ['bottom', 'right', 'left'],
+                                    },
+                                },
+                            ],
+                        },
+                    });
+                }
+            });
+        }, 500);
     </script>
     <style scoped>
         @keyframes borderMove {
