--- a/c28sdcm1jv977n4u63yccbty376l23p0xc38n0b2l4qgrje4d2xwjou9g76xdglsprhbpo1f5dhil392v5xeileb94p8g3le9f/index.html
+++ b/c28sdcm1jv977n4u63yccbty376l23p0xc38n0b2l4qgrje4d2xwjou9g76xdglsprhbpo1f5dhil392v5xeileb94p8g3le9f/index.html
@@ -424,6 +424,7 @@
     </style>
     <meta name='probely-verification' content='d1a5235e-0470-4602-aae0-84688966eb19' />
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/tippy.js@6.3.7/dist/tippy.min.css">
+    <script src="https://unpkg.com/@popperjs/core@2"></script>
     <script src="https://cdn.jsdelivr.net/npm/tippy.js@6.3.7/dist/tippy.umd.min.js"></script>
 </head>
 <body class="bg-gray-800 p-4 relative">
@@ -16008,7 +16009,7 @@
             }
 
         });
-        
+
         // تعريف directive مخصص لـ Tippy.js
 		app.directive('tippy', {
 			mounted(el, binding) {
