--- a/c28sdcm1jv977n4u63yccbty376l23p0xc38n0b2l4qgrje4d2xwjou9g76xdglsprhbpo1f5dhil392v5xeileb94p8g3le9f/index.html
+++ b/c28sdcm1jv977n4u63yccbty376l23p0xc38n0b2l4qgrje4d2xwjou9g76xdglsprhbpo1f5dhil392v5xeileb94p8g3le9f/index.html
@@ -66,7 +66,16 @@
         <style>
             [data-tippy-content] {
                 direction: rtl;
-                text-align: right;
+                text-align: center;
+            }
+            .tippy-box[data-theme~='retro'] {
+                background: linear-gradient(135deg, #F5F5DC 0%, #F9F9E5 100%);
+                color: #FF6448;
+                border: 2px solid #FF6448;
+                border-radius: 8px;
+                font-weight: bold;
+                padding: 6px 10px;
+                box-shadow: 0 2px 4px rgba(0,0,0,0.15);
             }
         </style>
         <style>
@@ -122,7 +131,7 @@
                 //     event.preventDefault();
                 // }
         </script>    
-        <script src="https://cdn.jsdelivr.net/npm/vue@3/dist/vue.global.js"></script>
+        <script src="https://cdn.jsdelivr.net/npm/vue@3/dist/vue.global.prod.js"></script>
         <script src="episodes.json" type="application/json"></script>
         <script src="https://cdn.tailwindcss.com"></script>
         <style>
@@ -16009,14 +16018,11 @@
             }
 
         });
-
-        // تعريف directive مخصص لـ Tippy.js
 		app.directive('tippy', {
 			mounted(el, binding) {
 				if (typeof tippy !== 'undefined') {
 					tippy(el, {
 						content: binding.value,
-						followCursor: true,
 						theme: 'retro',
 						placement: 'top',
 						allowHTML: true
