--- a/c28sdcm1jv977n4u63yccbty376l23p0xc38n0b2l4qgrje4d2xwjou9g76xdglsprhbpo1f5dhil392v5xeileb94p8g3le9f/index.html
+++ b/c28sdcm1jv977n4u63yccbty376l23p0xc38n0b2l4qgrje4d2xwjou9g76xdglsprhbpo1f5dhil392v5xeileb94p8g3le9f/index.html
@@ -70,8 +70,8 @@
                 border: 2px solid #FF6448;
                 border-radius: 8px;
                 font-weight: bold;
-                font-size: 14px;
-                padding: 6px 10px;
+                font-size: 18px;
+                padding: 6px;
                 box-shadow: 0 2px 4px rgba(0,0,0,0.15);
             }
         </style>
