--- a/c28sdcm1jv977n4u63yccbty376l23p0xc38n0b2l4qgrje4d2xwjou9g76xdglsprhbpo1f5dhil392v5xeileb94p8g3le9f/index.html
+++ b/c28sdcm1jv977n4u63yccbty376l23p0xc38n0b2l4qgrje4d2xwjou9g76xdglsprhbpo1f5dhil392v5xeileb94p8g3le9f/index.html
@@ -73,6 +73,9 @@
                 font-size: 16px;
                 box-shadow: 0 2px 4px rgba(0,0,0,0.15);
             }
+            .tippy-box[data-theme~='retro'][data-placement^='top'] > .tippy-arrow::before {
+                border-top-color: #FF6448;
+            }
         </style>
         <style>
             .always-visible-scrollbar {
