--- a/c28sdcm1jv977n4u63yccbty376l23p0xc38n0b2l4qgrje4d2xwjou9g76xdglsprhbpo1f5dhil392v5xeileb94p8g3le9f/index.html
+++ b/c28sdcm1jv977n4u63yccbty376l23p0xc38n0b2l4qgrje4d2xwjou9g76xdglsprhbpo1f5dhil392v5xeileb94p8g3le9f/index.html
@@ -65,12 +65,12 @@
         </style>
         <style>
             .tippy-box[data-theme~='retro'] {
-                background: linear-gradient(135deg, #F5F5DC 0%, #F9F9E5 100%);
+                background: linear-gradient(135deg, #505047 0%, #3d3d2f 100%);
                 color: #FF6448;
                 border: 2px solid #FF6448;
                 border-radius: 8px;
                 font-weight: bold;
-                font-size: 16px;
+                font-size: 15px;
                 box-shadow: 0 2px 4px rgba(0,0,0,0.15);
             }
             .tippy-box[data-theme~='retro'][data-placement^='top'] > .tippy-arrow::before {
