--- a/c28sdcm1jv977n4u63yccbty376l23p0xc38n0b2l4qgrje4d2xwjou9g76xdglsprhbpo1f5dhil392v5xeileb94p8g3le9f/index.html
+++ b/c28sdcm1jv977n4u63yccbty376l23p0xc38n0b2l4qgrje4d2xwjou9g76xdglsprhbpo1f5dhil392v5xeileb94p8g3le9f/index.html
@@ -66,7 +66,7 @@
         <style>
             .tippy-box[data-theme~='retro'] {
                 background: linear-gradient(135deg, #505047 0%, #3d3d2f 100%);
-                color: #FF6448;
+                color: #ffffff;
                 border: 2px solid #FF6448;
                 border-radius: 8px;
                 font-weight: bold;
