--- a/c28sdcm1jv977n4u63yccbty376l23p0xc38n0b2l4qgrje4d2xwjou9g76xdglsprhbpo1f5dhil392v5xeileb94p8g3le9f/index.html
+++ b/c28sdcm1jv977n4u63yccbty376l23p0xc38n0b2l4qgrje4d2xwjou9g76xdglsprhbpo1f5dhil392v5xeileb94p8g3le9f/index.html
@@ -5488,18 +5488,18 @@
                                 v-if="selectedEpisode.EpisodeParts" 
                                 :disabled="!previousEpisodeExists || selectedEpisode.EpisodeVideosIDs?.some(video => video.status === 'success' || video.status === 'ratelimiting' || video.status === 'sending') || selectedEpisode.EpisodeMangasIDs?.some(manga => manga.status === 'success' || manga.status === 'ratelimiting' || manga.status === 'sending')" 
                                 @click="fetchPreviousEpisode(); resetStatusForEpisodeManga();" 
-                                class="absolute right-[-8%] top-[50%] transform -translate-y-1/2 rounded-full p-3 focus:outline-none disabled:opacity-50 disabled:cursor-not-allowed transition-all duration-100 active:scale-90 z-10"
+                                class="absolute right-[-12%] md:right-[-10%] lg:right-[-8%] top-[50%] transform -translate-y-1/2 rounded-full p-2 md:p-3 focus:outline-none disabled:opacity-50 disabled:cursor-not-allowed transition-all duration-100 active:scale-90 z-10"
                             >
-                                <img src="https://raw.githubusercontent.com/c7bb/6Y9//main/c28sdcm1jv977n4u63yccbty376l23p0xc38n0b2l4qgrje4d2xwjou9g76xdglsprhbpo1f5dhil392v5xeileb94p8g3le9f/res/previous.png" alt="السابق" class="w-[8vw] h-[8vw] min-w-[32px] min-h-[32px] max-w-[64px] max-h-[64px]" />
+                                <img src="https://raw.githubusercontent.com/c7bb/6Y9//main/c28sdcm1jv977n4u63yccbty376l23p0xc38n0b2l4qgrje4d2xwjou9g76xdglsprhbpo1f5dhil392v5xeileb94p8g3le9f/res/previous.png" alt="السابق" class="w-8 h-8 md:w-10 md:h-10 lg:w-12 lg:h-12" />
                             </button>
                             
                             <button 
                                 v-if="selectedEpisode.EpisodeParts" 
                                 :disabled="!nextEpisodeExists || selectedEpisode.EpisodeVideosIDs?.some(video => video.status === 'success' || video.status === 'ratelimiting' || video.status === 'sending') || selectedEpisode.EpisodeMangasIDs?.some(manga => manga.status === 'success' || manga.status === 'ratelimiting' || manga.status === 'sending')" 
                                 @click="fetchNextEpisode(); resetStatusForEpisodeManga();" 
-                                class="absolute right-[-8%] top-[70%] transform -translate-y-1/2 rounded-full p-3 focus:outline-none disabled:opacity-50 disabled:cursor-not-allowed transition-all duration-100 active:scale-90 z-10"
+                                class="absolute right-[-12%] md:right-[-10%] lg:right-[-8%] top-[70%] transform -translate-y-1/2 rounded-full p-2 md:p-3 focus:outline-none disabled:opacity-50 disabled:cursor-not-allowed transition-all duration-100 active:scale-90 z-10"
                             >
-                                <img src="https://raw.githubusercontent.com/c7bb/6Y9//main/c28sdcm1jv977n4u63yccbty376l23p0xc38n0b2l4qgrje4d2xwjou9g76xdglsprhbpo1f5dhil392v5xeileb94p8g3le9f/res/next.png" alt="التالي" class="w-[8vw] h-[8vw] min-w-[32px] min-h-[32px] max-w-[64px] max-h-[64px]" />
+                                <img src="https://raw.githubusercontent.com/c7bb/6Y9//main/c28sdcm1jv977n4u63yccbty376l23p0xc38n0b2l4qgrje4d2xwjou9g76xdglsprhbpo1f5dhil392v5xeileb94p8g3le9f/res/next.png" alt="التالي" class="w-8 h-8 md:w-10 md:h-10 lg:w-12 lg:h-12" />
                             </button>
 
                             <!-- Sticky Header Section -->
