--- a/c28sdcm1jv977n4u63yccbty376l23p0xc38n0b2l4qgrje4d2xwjou9g76xdglsprhbpo1f5dhil392v5xeileb94p8g3le9f/index.html
+++ b/c28sdcm1jv977n4u63yccbty376l23p0xc38n0b2l4qgrje4d2xwjou9g76xdglsprhbpo1f5dhil392v5xeileb94p8g3le9f/index.html
@@ -5490,7 +5490,7 @@
                                 @click="fetchPreviousEpisode(); resetStatusForEpisodeManga();" 
                                 class="absolute right-[-12%] md:right-[-10%] lg:right-[-8%] top-[50%] transform -translate-y-1/2 rounded-full p-2 md:p-3 focus:outline-none disabled:opacity-50 disabled:cursor-not-allowed transition-all duration-100 active:scale-90 z-10"
                             >
-                                <img src="https://raw.githubusercontent.com/c7bb/6Y9//main/c28sdcm1jv977n4u63yccbty376l23p0xc38n0b2l4qgrje4d2xwjou9g76xdglsprhbpo1f5dhil392v5xeileb94p8g3le9f/res/previous.png" alt="السابق" class="w-8 h-8 md:w-10 md:h-10 lg:w-12 lg:h-12" />
+                                <img src="https://raw.githubusercontent.com/c7bb/6Y9//main/c28sdcm1jv977n4u63yccbty376l23p0xc38n0b2l4qgrje4d2xwjou9g76xdglsprhbpo1f5dhil392v5xeileb94p8g3le9f/res/previous.png" alt="السابق" class="h-8 w-8" />
                             </button>
                             
                             <button 
@@ -5499,7 +5499,7 @@
                                 @click="fetchNextEpisode(); resetStatusForEpisodeManga();" 
                                 class="absolute right-[-12%] md:right-[-10%] lg:right-[-8%] top-[70%] transform -translate-y-1/2 rounded-full p-2 md:p-3 focus:outline-none disabled:opacity-50 disabled:cursor-not-allowed transition-all duration-100 active:scale-90 z-10"
                             >
-                                <img src="https://raw.githubusercontent.com/c7bb/6Y9//main/c28sdcm1jv977n4u63yccbty376l23p0xc38n0b2l4qgrje4d2xwjou9g76xdglsprhbpo1f5dhil392v5xeileb94p8g3le9f/res/next.png" alt="التالي" class="w-8 h-8 md:w-10 md:h-10 lg:w-12 lg:h-12" />
+                                <img src="https://raw.githubusercontent.com/c7bb/6Y9//main/c28sdcm1jv977n4u63yccbty376l23p0xc38n0b2l4qgrje4d2xwjou9g76xdglsprhbpo1f5dhil392v5xeileb94p8g3le9f/res/next.png" alt="التالي" class="h-8 w-8" />
                             </button>
 
                             <!-- Sticky Header Section -->
