--- a/c28sdcm1jv977n4u63yccbty376l23p0xc38n0b2l4qgrje4d2xwjou9g76xdglsprhbpo1f5dhil392v5xeileb94p8g3le9f/index.html
+++ b/c28sdcm1jv977n4u63yccbty376l23p0xc38n0b2l4qgrje4d2xwjou9g76xdglsprhbpo1f5dhil392v5xeileb94p8g3le9f/index.html
@@ -5488,7 +5488,7 @@
                                 v-if="selectedEpisode.EpisodeParts" 
                                 :disabled="!previousEpisodeExists || selectedEpisode.EpisodeVideosIDs?.some(video => video.status === 'success' || video.status === 'ratelimiting' || video.status === 'sending') || selectedEpisode.EpisodeMangasIDs?.some(manga => manga.status === 'success' || manga.status === 'ratelimiting' || manga.status === 'sending')" 
                                 @click="fetchPreviousEpisode(); resetStatusForEpisodeManga();" 
-                                class="absolute right-[-12%] md:right-[-10%] lg:right-[-8%] top-[50%] transform -translate-y-1/2 rounded-full p-2 md:p-3 focus:outline-none disabled:opacity-50 disabled:cursor-not-allowed transition-all duration-100 active:scale-90 z-10"
+                                class="absolute right-[-50px] sm:right-[-50px] md:right-[-50px] lg:right-[-50px] top-[50%] transform -translate-y-1/2 rounded-full p-2 md:p-3 focus:outline-none disabled:opacity-50 disabled:cursor-not-allowed transition-all duration-100 active:scale-90 z-10"
                             >
                                 <img src="https://raw.githubusercontent.com/c7bb/6Y9//main/c28sdcm1jv977n4u63yccbty376l23p0xc38n0b2l4qgrje4d2xwjou9g76xdglsprhbpo1f5dhil392v5xeileb94p8g3le9f/res/previous.png" alt="السابق" class="h-8 w-8" />
                             </button>
@@ -5497,7 +5497,7 @@
                                 v-if="selectedEpisode.EpisodeParts" 
                                 :disabled="!nextEpisodeExists || selectedEpisode.EpisodeVideosIDs?.some(video => video.status === 'success' || video.status === 'ratelimiting' || video.status === 'sending') || selectedEpisode.EpisodeMangasIDs?.some(manga => manga.status === 'success' || manga.status === 'ratelimiting' || manga.status === 'sending')" 
                                 @click="fetchNextEpisode(); resetStatusForEpisodeManga();" 
-                                class="absolute right-[-12%] md:right-[-10%] lg:right-[-8%] top-[70%] transform -translate-y-1/2 rounded-full p-2 md:p-3 focus:outline-none disabled:opacity-50 disabled:cursor-not-allowed transition-all duration-100 active:scale-90 z-10"
+                                class="absolute right-[-50px] sm:right-[-50px] md:right-[-50px] lg:right-[-50px] top-[50%] transform -translate-y-1/2 rounded-full p-2 md:p-3 focus:outline-none disabled:opacity-50 disabled:cursor-not-allowed transition-all duration-100 active:scale-90 z-10"
                             >
                                 <img src="https://raw.githubusercontent.com/c7bb/6Y9//main/c28sdcm1jv977n4u63yccbty376l23p0xc38n0b2l4qgrje4d2xwjou9g76xdglsprhbpo1f5dhil392v5xeileb94p8g3le9f/res/next.png" alt="التالي" class="h-8 w-8" />
                             </button>
