--- a/c28sdcm1jv977n4u63yccbty376l23p0xc38n0b2l4qgrje4d2xwjou9g76xdglsprhbpo1f5dhil392v5xeileb94p8g3le9f/index.html
+++ b/c28sdcm1jv977n4u63yccbty376l23p0xc38n0b2l4qgrje4d2xwjou9g76xdglsprhbpo1f5dhil392v5xeileb94p8g3le9f/index.html
@@ -101,16 +101,14 @@
         <style>
             .zikr-box {
                 position: relative;
-                max-width: 80vw;
-                height: 10vh;
-                line-height: 10vh;
+                max-width: 80%;
+                height: 10%;
+                line-height: 10%;
                 text-align: center;
-                font-size: 2vw;
+                font-size: 2%;
                 font-weight: bold;
                 color: #fff;
-                background: #008080;
-                border-radius: 8px;
-                margin: 5vh auto;
+                margin: 5% auto;
                 overflow: hidden;
                 transition: opacity 0.8s ease-in-out;
             }
