--- a/c28sdcm1jv977n4u63yccbty376l23p0xc38n0b2l4qgrje4d2xwjou9g76xdglsprhbpo1f5dhil392v5xeileb94p8g3le9f/index.html
+++ b/c28sdcm1jv977n4u63yccbty376l23p0xc38n0b2l4qgrje4d2xwjou9g76xdglsprhbpo1f5dhil392v5xeileb94p8g3le9f/index.html
@@ -103,7 +103,7 @@
                 display: block;
                 text-align: center;
                 font-weight: bold;
-                color: #fff;
+                color: #FF6448;
                 margin: 4vh auto;
                 transition: opacity 0.8s ease-in-out;
             }
