--- a/c28sdcm1jv977n4u63yccbty376l23p0xc38n0b2l4qgrje4d2xwjou9g76xdglsprhbpo1f5dhil392v5xeileb94p8g3le9f/index.html
+++ b/c28sdcm1jv977n4u63yccbty376l23p0xc38n0b2l4qgrje4d2xwjou9g76xdglsprhbpo1f5dhil392v5xeileb94p8g3le9f/index.html
@@ -103,7 +103,7 @@
                 display: block;
                 text-align: center;
                 font-weight: bold;
-                color: #4ce290;
+                color: #3dff94;
                 margin: 4vh auto;
                 transition: opacity 0.8s ease-in-out;
             }
@@ -5559,7 +5559,7 @@
               <div class="w-full h-full animate-spin">
                 <svg class="w-full h-full" viewBox="0 0 100 100" style="transform: rotate(-90deg);">
                   <circle 
-                    class="stroke-stone-600" 
+                    class="stroke-orange-700" 
                     cx="50" 
                     cy="50" 
                     r="45" 
