--- a/c28sdcm1jv977n4u63yccbty376l23p0xc38n0b2l4qgrje4d2xwjou9g76xdglsprhbpo1f5dhil392v5xeileb94p8g3le9f/index.html
+++ b/c28sdcm1jv977n4u63yccbty376l23p0xc38n0b2l4qgrje4d2xwjou9g76xdglsprhbpo1f5dhil392v5xeileb94p8g3le9f/index.html
@@ -13425,8 +13425,8 @@
                         // Arabic format
                         // ----------------------
                         let countdownArabic = '';
-                        const moreThan = 'أكثر من ';
-                        const lessThan = 'أقل من ';
+                        const moreThan = 'متبقي أكثر من ';
+                        const lessThan = 'متبقي أقل من ';
 
                         if (diffDaysDecimal < 1) {
                             countdownArabic = 'متبقي أقل من يوم';
