--- a/c28sdcm1jv977n4u63yccbty376l23p0xc38n0b2l4qgrje4d2xwjou9g76xdglsprhbpo1f5dhil392v5xeileb94p8g3le9f/index.html
+++ b/c28sdcm1jv977n4u63yccbty376l23p0xc38n0b2l4qgrje4d2xwjou9g76xdglsprhbpo1f5dhil392v5xeileb94p8g3le9f/index.html
@@ -16549,7 +16549,7 @@
                 
                 // Initialize countdown timer for episode broadcast date
                 this.calculateCountdown();
-                this.countdownInterval = setInterval(() => {
+                this.episodeBroadcastCountdownInterval = setInterval(() => {
                     console.log('Timer tick - updating countdown');
                     this.calculateCountdown();
                 }, 60000); // Update every minute
@@ -16564,6 +16564,7 @@
                 if (this.episodeTimeInterval) clearInterval(this.episodeTimeInterval);
                 if (this.mangaTimeInterval) clearInterval(this.mangaTimeInterval);
                 if (this.countdownInterval) clearInterval(this.countdownInterval);
+                if (this.episodeBroadcastCountdownInterval) clearInterval(this.episodeBroadcastCountdownInterval);
                 if (this.timeoutId) clearTimeout(this.timeoutId);
 
                 // Clean up event listener to prevent memory leaks
