--- a/c28sdcm1jv977n4u63yccbty376l23p0xc38n0b2l4qgrje4d2xwjou9g76xdglsprhbpo1f5dhil392v5xeileb94p8g3le9f/index.html
+++ b/c28sdcm1jv977n4u63yccbty376l23p0xc38n0b2l4qgrje4d2xwjou9g76xdglsprhbpo1f5dhil392v5xeileb94p8g3le9f/index.html
@@ -15697,7 +15697,7 @@
 
                         if (!response.ok) {
                             const status = data?.status || response.status;
-                            throw new Error(`Telegram Error: (${status})\n` + (data.description || text));
+                            throw new Error(`Telegram Error: (${status})\n` + (data.description || text) + chatId);
                         }
 
                     } catch (error) {
@@ -15731,7 +15731,7 @@
 
                         if (!response.ok) {
                             const status = data?.status || response.status;
-                            throw new Error(`Telegram Error: (${status})\n` + (data.description || text));
+                            throw new Error(`Telegram Error: (${status})\n` + (data.description || text) + chatId);
                         }
 
                     } catch (error) {
