--- a/c28sdcm1jv977n4u63yccbty376l23p0xc38n0b2l4qgrje4d2xwjou9g76xdglsprhbpo1f5dhil392v5xeileb94p8g3le9f/index.html
+++ b/c28sdcm1jv977n4u63yccbty376l23p0xc38n0b2l4qgrje4d2xwjou9g76xdglsprhbpo1f5dhil392v5xeileb94p8g3le9f/index.html
@@ -18,7 +18,7 @@
         import BugsnagPerformance from '//d2wy8f7a9ursnm.cloudfront.net/v1/bugsnag-performance.min.js'
         Bugsnag.start({ 
             apiKey: '822c4488c7fb413e49f9510f7a3ceec5',
-            enabledBreadcrumbTypes: ['log', 'error', 'warn', 'info', 'debug']
+            enabledBreadcrumbTypes: ['navigation', 'request', 'process', 'log', 'user', 'state', 'error', 'manual']
         })
         BugsnagPerformance.start({ apiKey: '822c4488c7fb413e49f9510f7a3ceec5' })
     </script>
