--- a/c28sdcm1jv977n4u63yccbty376l23p0xc38n0b2l4qgrje4d2xwjou9g76xdglsprhbpo1f5dhil392v5xeileb94p8g3le9f/index.html
+++ b/c28sdcm1jv977n4u63yccbty376l23p0xc38n0b2l4qgrje4d2xwjou9g76xdglsprhbpo1f5dhil392v5xeileb94p8g3le9f/index.html
@@ -15996,28 +15996,41 @@
                         console.log("platform:", webApp.platform);
                         console.log("===============================");
 
-                        // 🔹 إذا كان يوجد مستخدم، اطبع بياناته
+                        // 🔹 إذا كان يوجد مستخدم، اطبع بياناته واستخدم LogRocket.identify
                         if (webApp.initDataUnsafe.user) {
-                            console.log("User Data:", webApp.initDataUnsafe.user);
-                            console.log("User ID:", webApp.initDataUnsafe.user.id);
-                            console.log("Username:", webApp.initDataUnsafe.user.username);
-                            console.log("First name:", webApp.initDataUnsafe.user.first_name);
-                            console.log("Language code:", webApp.initDataUnsafe.user.language_code);
-                            console.log("Is Premium:", webApp.initDataUnsafe.user.is_premium);
-                            console.log("Photo URL:", webApp.initDataUnsafe.user.photo_url);
+                            const user = webApp.initDataUnsafe.user;
+
+                            console.log("User Data:", user);
+                            console.log("User ID:", user.id);
+                            console.log("Username:", user.username);
+                            console.log("First name:", user.first_name);
+                            console.log("Language code:", user.language_code);
+                            console.log("Is Premium:", user.is_premium);
+                            console.log("Photo URL:", user.photo_url);
+
+                            // 🔹 LogRocket Identify
+                            LogRocket.identify(String(user.id), {
+                            name: `${user.first_name} ${user.last_name || ''}`.trim(),
+                            telegramProfile: user.username ? `https://t.me/${user.username}` : undefined,
+                            username: user.username || undefined,
+                            language_code: user.language_code || undefined,
+                            is_premium: user.is_premium || false,
+                            photo_url: user.photo_url || undefined
+                            });
                         } else {
                             console.warn("⚠️ لا توجد بيانات مستخدم (user object غير موجود).");
                         }
 
                         // 🔹 إذا كان يوجد بيانات محادثة (عند التشغيل من القنوات/المجموعات)
                         if (webApp.initDataUnsafe.chat) {
-                            console.log("Chat Data:", webApp.initDataUnsafe.chat);
-                            console.log("Chat ID:", webApp.initDataUnsafe.chat.id);
-                            console.log("Chat Type:", webApp.initDataUnsafe.chat.type);
-                            console.log("Chat Title:", webApp.initDataUnsafe.chat.title);
+                            const chat = webApp.initDataUnsafe.chat;
+                            console.log("Chat Data:", chat);
+                            console.log("Chat ID:", chat.id);
+                            console.log("Chat Type:", chat.type);
+                            console.log("Chat Title:", chat.title);
                         }
 
-                        // 🔹 الآن تابع التحقق من العضوية في القناة
+                        // 🔹 تابع التحقق من العضوية في القناة
                         const telegramUserId = webApp.initDataUnsafe.user?.id;
 
                         if (!telegramUserId) {
